--- a/index.html
+++ b/index.html
@@ -25,36 +25,36 @@
     <table>
         <thead>
             <tr>
-                <th>Header 1</th>
-                <th>Header 2</th>
-                <th>Header 3</th>
-                <th>Header 4</th>
+                <th>REG NO</th>
+                <th>NAME</th>
+                <th>DEPT</th>
+                <th>SUBJECT</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Row 1, Cell 1</td>
-                <td>Row 1, Cell 2</td>
-                <td>Row 1, Cell 3</td>
-                <td>Row 1, Cell 4</td>
+                <td>001</td>
+                <td>002</td>
+                <td>003</td>
+                <td>004</td>
             </tr>
             <tr>
-                <td>Row 2, Cell 1</td>
-                <td>Row 2, Cell 2</td>
-                <td>Row 2, Cell 3</td>
-                <td>Row 2, Cell 4</td>
+                <td>RAVI</td>
+                <td>MANI</td>
+                <td>GANESH</td>
+                <td>GOPI</td>
             </tr>
             <tr>
-                <td>Row 3, Cell 1</td>
-                <td>Row 3, Cell 2</td>
-                <td>Row 3, Cell 3</td>
-                <td>Row 3, Cell 4</td>
+                <td>B.E</td>
+                <td>B.ED</td>
+                <td>B.TECH</td>
+                <td>B.SC</td>
             </tr>
-            <tr>
-                <td>Row 4, Cell 1</td>
-                <td>Row 4, Cell 2</td>
-                <td>Row 4, Cell 3</td>
-                <td>Row 4, Cell 4</td>
+              <tr>
+                <td>ENGLISH</td>
+                <td><TAMIL/td>
+                <td>SCIENCE</td>
+                <td>MATHS</td>
             </tr>
         </tbody>
     </table>
