--- a/index.html
+++ b/index.html
@@ -34,26 +34,26 @@
         <tbody>
             <tr>
                 <td>001</td>
-                <td>002</td>
-                <td>003</td>
-                <td>004</td>
-            </tr>
-            <tr>
                 <td>RAVI</td>
-                <td>MANI</td>
-                <td>GANESH</td>
-                <td>GOPI</td>
+                <td>B.E</td>
+                <td>TAMIL</td>
             </tr>
             <tr>
-                <td>B.E</td>
+                <td>002</td>
+                <td>MANI</td>
                 <td>B.ED</td>
+                <td>ENGLISH</td>
+            </tr>
+            <tr>
+                <td>003</td>
+                <td>GOPI/td>
                 <td>B.TECH</td>
-                <td>B.SC</td>
+                <td>SCIENCE</td>
             </tr>
               <tr>
-                <td>ENGLISH</td>
-                <td><TAMIL/td>
-                <td>SCIENCE</td>
+                <td>004</td>
+                <td>RAM</td>
+                <td>B.SC</td>
                 <td>MATHS</td>
             </tr>
         </tbody>
